ASU-873: Update anchor link & fix its scrolling; Add max height to slick-list so it doesn't span/stretch over the entire side

--- a/public/themes/custom/asuntotuotanto/src/scss/components/misc/_showcase-gallery.scss
+++ b/public/themes/custom/asuntotuotanto/src/scss/components/misc/_showcase-gallery.scss
@@ -71,6 +71,10 @@
     }
   }
 
+  .slick-list {
+    max-height: 550px;
+  }
+
   .slide__content {
     cursor: pointer;
     position: relative;
